# facality

./: Cargo.toml  Rocket.toml
src/: api_data_types.rs  main.rs  utils.rs
src/api_wrappers/: mod.rs  vk_api_wrapper.rs
templates/: request_page.html
templates/static/scripts/: request_page_scripts.js
templates/static/styles/: styles.css
