[package]
name = "facality"
version = "0.1.0"
authors = ["radmirkus <radmirka745@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
futures = "0.3"
async-fetcher = "0.1.2"
tokio-compat-02 = "0.1.2"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["tera_templates"]